--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions. It's copied from the GitHub Graduation Workflow.
 
-name: Pão de Queijo Helper
+name: Talent Land PR challenge
 
 # Controls when the action will run.
 on:
